# pico_device_and_host

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main_device.c  main_host.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
